Resolve deprecated code